[tool.poetry]
name = "powerpull"
version = "0.1.0"
description = ""
authors = ["Simone Rosani <rsn.smn@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
